<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Android.Box</string>
    <string name="text_copy">Copy</string>
    <string name="text_finish">Finished</string>
    <string name="text_canceled_by_user">Cancel by user.</string>
    <string name="text_no_install_need_plugin">You do not install the corresponding plugin.</string>
    <string name="text_qrcode">QR code</string>
    <string name="text_share">Share</string>
    <string name="text_setting">Setting</string>
    <string name="text_install">Install</string>
    <string name="text_androidsdk" translatable="false">Android SDK</string>
    <string name="text_appmanagement">App Management</string>
    <string name="text_error">Error</string>
    <string name="text_use_qrplugin_fail">Use qrcode plugin fail.</string>
    <string name="text_app_name">Application name</string>
    <string name="text_app_packagename">Package name</string>
    <string name="text_app_info">Application information</string>
    <string name="text_app_apk">APK file</string>
    <string name="text_app_version">Version</string>
    <string name="text_app_firstinstalltime">Install time</string>
    <string name="text_app_lastupdatetime">Update time</string>
    <string name="text_app_size">App size</string>
    <string name="text_app_apkpath">APK path</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_newsbox">News box</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_previous_page">Previous page</string>
    <string name="text_next_page">Next page</string>
    <string name="text_first_page">First page</string>
    <string name="text_select_site">Select site</string>
    <string name="text_site_dgtle_news">Dgtle news</string>
    <string name="text_site_dgtle_forum">Dgtle forum</string>
    <string name="text_open">Open</string>
    <string name="text_more">More</string>
    <string name="text_site_sspai_article">sspai articles</string>
    <string name="text_image_box">Image box</string>
    <string name="text_site_gank_io">Gank.io</string>
    <string name="setting_http_defaultua" translatable="false">Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.186 Safari/537.36</string>
    <string name="text_icon">Icon</string>
    <string name="text_permission_storage">Storage permission</string>
    <string name="text_weather">Weather</string>
    <string name="text_update">Update</string>
    <string name="text_bilibili">Bilibili</string>
    <string name="text_remove_temp_files">Remove temp files</string>
    <string name="text_send">Send</string>
    <string name="text_serverchan">Server Chan</string>
    <string name="text_sendto_serverchan">Send to Server Chan</string>
    <string name="text_save">Save</string>
    <string name="text_site_sspai">Sspai</string>
    <string name="text_all">All</string>
    <string name="text_site_dgtle">Dgtle</string>
    <string name="text_channel">Channel</string>
    <string name="text_site">Site</string>
    <string name="text_android">Android</string>
    <string name="title_activity_image_view">Image View</string>
    <string name="text_gankio_girl">Girl</string>
    <string name="text_qrcode_content">QR code content</string>
    <string name="text_setting_use_cct_for_web">Use Chrome Custom Tabs to browse the web</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_qrcode_scan">Scan QR code</string>
    <string name="text_qrcode_generate">Generate QR code</string>
    <string name="text_permission_camera">Camera permission</string>
    <string name="text_setting_open_image_url_with_buildin_viewer">Open image url with build-in viewer</string>
    <string name="text_manual_update">Manual update</string>
    <string name="text_site_rsshub">RSSHub</string>
    <string name="text_site_rsshub_douban_movie_playing">Douban playing movie</string>
    <string name="title_activity_app_down">App download</string>
    <string name="text_download">Download</string>
    <string name="text_delete">Delete</string>
    <string name="text_check_update">Check update</string>
    <string name="text_open_web">Open web</string>
    <string name="text_paste">Paste</string>
    <string name="text_import">Import</string>
    <string name="text_export">Export</string>
    <string name="text_check_permissions">Check permissions</string>
    <string name="text_wandoujia">Wandoujia</string>
    <string name="text_coolapk">CoolApk</string>
    <string name="text_myapp">Tencent app store</string>
    <string name="text_feed">Feed</string>
    <string name="text_news">News</string>
    <string name="text_app">App</string>
    <string name="text_site_rsshub_juejin_trending_android">juejin Android trending</string>
    <string name="text_site_rsshub_bangumi_calendar_today">Bangumi calendar today</string>
    <string name="text_site_rsshub_new_rss">New RSS on RSSHub</string>
    <string name="text_site_rsshub_guokr_scientific">Guokr scientific</string>
    <string name="title_activity_xxdown">XX Down</string>
    <string name="text_site_wanandroid">WanAndroid</string>
    <string name="text_site_zhihu_daily">Zhihu Daily</string>
    <string name="title_activity_web">Web browser</string>
    <string name="text_buildin_web_browser">Build-in web browser</string>
    <string name="title_activity_image_web">Image site</string>
    <string name="text_open_in_other_browser">Open in other browser</string>
    <string name="title_activity_tools">Tools</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="text_add">Add</string>
    <string name="text_title">Title</string>
    <string name="text_content">Content</string>
    <string name="text_weixin_jingxuan">WeChat featured articles</string>
    <string name="text_qrcode_scan_wechat">WeChat Scan</string>
    <string name="text_qrcode_scan_alipay">Alipay Scan</string>
    <string name="title_shortcuts">Shortcuts</string>
    <string name="text_random">Random</string>
    <string name="text_site_tophub_today">Tophub.Today</string>
    <string name="text_site_tophub_today_weibo">Tophub.Today - Weibo</string>
    <string name="text_site_tophub_today_hupubuxingjie">Tophub.Today - Hupu Buxingjie</string>
    <string name="text_androidbox_opener">Android Box…</string>
    <string name="text_app_uninstall">Uninstall app</string>
    <string name="text_tophub_today_zhihu_hot">Tophub.Today - Zhihu Hottest</string>
    <string name="text_tophub_today_v2ex_hot">Tophub.Today - V2EX Hottest</string>
    <string name="text_site_tophub_baidu">Tophub.Today - Baidu</string>
    <string name="text_site_tophub_qdaily">Tophub.Today - qdaily</string>
    <string name="title_activity_tophub">Tophub</string>
    <string name="text_homepage">Home page</string>
    <string name="text_category">Category</string>
    <string name="text_page">Page</string>
    <string name="text_text">Text</string>
    <string name="title_activity_application_down" translatable="false">Application Down</string>
    <string name="text_search">Search</string>
</resources>
