<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:shortcutDisabledMessage="@string/text_qrcode_scan"
        android:shortcutId="qrcode_scan"
        android:shortcutLongLabel="@string/text_qrcode_scan"
        android:shortcutShortLabel="@string/text_qrcode_scan">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.zhihaofans.androidbox.mod.QrcodeScanShortcuts"
            android:targetPackage="com.zhihaofans.androidbox" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_serverchan"
        android:shortcutDisabledMessage="@string/text_serverchan"
        android:shortcutId="serverchan"
        android:shortcutLongLabel="@string/text_serverchan"
        android:shortcutShortLabel="@string/text_serverchan">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.zhihaofans.androidbox.mod.ServerChanShortcuts"
            android:targetPackage="com.zhihaofans.androidbox" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutDisabledMessage="@string/text_feed"
        android:shortcutId="newbox"
        android:shortcutLongLabel="@string/text_feed"
        android:shortcutShortLabel="@string/text_feed">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.zhihaofans.androidbox.mod.FeedShortcuts"
            android:targetPackage="com.zhihaofans.androidbox" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>