<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TophubActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_tophub"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_tophub" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_tophub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        app:menu_animationDelayPerItem="0"
        app:menu_colorNormal="#FFB805"
        app:menu_colorPressed="#F2AB00"
        app:menu_colorRipple="#D99200"
        app:menu_shadowColor="#444">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_tophub_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_edit"
            app:fab_colorNormal="@color/cyan"
            app:fab_colorPressed="@color/darkcyan"
            app:fab_label="@string/text_page"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_tophub_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_home"
            app:fab_colorNormal="@color/cyan"
            app:fab_colorPressed="@color/darkcyan"
            app:fab_label="@string/text_homepage"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_tophub_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_menu"
            app:fab_colorNormal="@color/cyan"
            app:fab_colorPressed="@color/darkcyan"
            app:fab_label="@string/text_category"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_tophub_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_refresh"
            app:fab_colorNormal="@color/cyan"
            app:fab_colorPressed="@color/darkcyan"
            app:fab_label="@string/text_refresh"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_tophub_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_person"
            app:fab_colorNormal="@color/cyan"
            app:fab_colorPressed="@color/darkcyan"
            app:fab_label="@string/text_login"
            app:fab_size="normal" />
    </com.github.clans.fab.FloatingActionMenu>


</androidx.coordinatorlayout.widget.CoordinatorLayout>